@@ -5,7 +5,7 @@
   <targetVersion>0.18.1722</targetVersion>
   <url>https://ludeon.com/forums/index.php?topic=26276.0</url>
 	<description>"medic addons"
-	Ver.: b18-1.0.6
+	Ver.: b18-1.0.7
 	
 	"This is your medical area? It looks a bit ... empty."
 	"Don't worry just lay down and we will start with the operation"
