@@ -91,3 +91,9 @@ personal changelog for mod "sd_medicaddons"
 	Ver.: b18-1.0.6
 	- added compatibility with zipangu pack mod, added vitals monitor to some beds, where it was missing
 	- updated version in about file, not that i would forget XD
+
+- 09/04/2018
+
+	Ver.: b18-1.0.7
+	- updated modsync file
+	- added mending beds comp
